--- a/src/scss/_variables-dark.scss
+++ b/src/scss/_variables-dark.scss
@@ -6,12 +6,12 @@
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/utilities";
 
-$primary: #0266dcff;
-$secondary: #5a697fff;
-$dark: #1b1e23ff;
-$gray: #2d333fff;
+$primary: #0a23d7;
+$secondary: #d2d5da;
+$dark: #00094e;
+$gray: #d2d5da;
 
-$card-bg: $gray;
+$card-bg: $dark;
 $card-border-radius: 1rem;
 $card-inner-border-radius: 1rem;
 
