--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,8 +1,8 @@
-// Import all of Bootstrap’s CSS
+// Import all of Bootstrap's CSS
 @import "variables";
 @import "variables-dark";
 @import "bootstrap/scss/bootstrap";
-
+@import "atom";
 
 .finisher-header {
   bottom: 0px;
