feat(ui): add components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="bg-body-tertiary">
+<div class="bg-body">
   <div class="container">
     <footer class="py-3">
       <div class="row py-5">
@@ -43,24 +43,29 @@
         <div class="col-6">
           <article class="d-flex gap-3">
             <h3>Get in touch</h3>
-            <ion-icon name="arrow-forward-outline" size="large"></ion-icon>
+            <ion-icon name="arrow-forward-outline" size="large" class="text-primary"></ion-icon>
           </article>
           <div class="row">
             <article class="col">
               <h5>EMAIL ME:</h5>
-              <a href="">contatt@gmail.com</a>
+              <a
+              class="text-primary"
+              href="mailto:alex.g.cortes.g@gmail.com">alex.g.cortes.g@gmail.com</a>
             </article>
             <article class="col">
               <h5>CALL ME:</h5>
-              <a href="">(951) 292 55 60</a>
+              <a class="text-primary" href="tel:9512925560">(951) 292 55 60</a>
             </article>
           </div>
         </div>
       </div>
       <div class="text-center border-top p-3">
-        <span class="text-muted"
-          >© 2025 &lt;DevAlex /&gt; <ion-icon name="heart"></ion-icon
-        ></span>
+        <span
+          class="text-muted"
+        >
+          © 2025 Made with
+          <ion-icon name="heart" class="text-primary"></ion-icon>
+          by &lt;DevAlex /&gt; </span>
       </div>
     </footer>
   </div>
