--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 ---
 
 <section class="px-4 py-5 my-5 text-center">
-  <span class="badge badge-neon rounded-pill mb-3 px-3 py-2">
+  <span class="badge badge-neon rounded-pill px-3 py-2 mb-5">
     🟢 Disponible para nuevos retos | Web & Mobile
   </span>
   <h1 class="display-5" data-aos="fade-up">Hello, I'm Alex</h1>
@@ -14,7 +14,7 @@
     Full Stack Developer
   </h2>
   <div class="col-12 col-lg-6 mx-0 mx-md-auto">
-    <p class="lead mb-5 fs-5" data-aos="fade-up" data-aos-delay="200">
+    <p class="mb-5 fs-5 text-white text-opacity-75" data-aos="fade-up" data-aos-delay="200">
       +5 años transformando requerimientos complejos en arquitectura
       robusta con <strong>Laravel, NestJS y React</strong>. Especialista
       en ciclo de vida completo y alto rendimiento.
@@ -28,7 +28,7 @@
   <div class="mb-5">
     <div class="container px-5 text-center">
       <ul class="nav list-unstyled d-flex justify-content-center h1">
-        <li class="ms-3">
+        <li class="">
           <a
             class="text-white"
             target="_blank"
