--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -2,8 +2,8 @@
 ---
 
 <section class="container py-5">
-  <h2 class="display-5 my-5 text-center text-info text-glow">
-    ¿Qué puedo aportar a su equipo?
+  <h2 class="display-5 fw-bold my-5 text-center text-info text-glow">
+    Value proposition
   </h2>
 
   <div class="row justify-content-md-between py-5">
@@ -64,12 +64,12 @@
       </div>
     </div>
     <div class="col-12 col-md-5">
-      <p class="fs-5 text-secondary">
+      <p class="fs-5 text-opacity-75">
         Mi valor no reside solo en el código, sino en la entrega de
         soluciones de principio a fin que impulsan la eficiencia del
         negocio.
       </p>
-      <p class="text-secondary">
+      <p class="text-opacity-75">
         Domino un stack potente basado en Laravel (PHP), NestJS (Node.js) y
         React/TypeScript, con la capacidad de trabajar con bases de datos
         relacionales y NoSQL, y de implementar arquitecturas Serverless (AWS
