--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,22 +3,40 @@ const md = [
   {
     title: "TrainHub",
     tags: ["Serverless", "EdTech"],
-    description: "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
+    description:
+      "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
     features: ["Laravel Queues", "Dashboards Analytics", "Integración SCORM"],
   },
   {
     title: "Sistema de Gestión Académica",
     tags: ["Serverless", "EdTech"],
-    description: "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
+    description:
+      "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
     features: ["Laravel Queues", "Dashboards Analytics", "Integración SCORM"],
   },
   {
-    title: "Plataforma para gestión de ventas y el control de inventario (EPOS)",
+    title:
+      "Plataforma para gestión de ventas y el control de inventario (EPOS)",
     tags: ["Serverless", "EdTech"],
-    description: "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
+    description:
+      "Plataforma para gestión de capacitaciones empresariales (LMS) Tecnologías: PHP, Laravel, Vue.js, Vuex, Bootstrap, MariaDB, AWS S3, SCORM, Go.",
     features: ["Laravel Queues", "Dashboards Analytics", "Integración SCORM"],
   },
+];
 
+const ingenia = [
+  {
+    title: "Landing Pages",
+    tags: ["Bootstrap", "JavaScript"],
+    description: "Desarrollo landing pages para startups locales y nacionales utilizando themas personalizados basados en Bootstrap e integre animaciones con JavaScript. ",
+    features: ["CEO", "HTML", "CSS", "Responsive"],
+  },
+  {
+    title: "Wordpress Themes",
+    tags: ["WordPress", "JQuery", "PHP"],
+    description: "Cree themas personalizados para WordPress ademas de integrar algunos plugins para la gestion de contenido.",
+    features: ["Customization", "Responsive"],
+  },
 ];
 ---
 
@@ -35,11 +53,17 @@ const md = [
           />
           <span class="d-block">2019 - 2025</span>
           <h3 class="text-primary my-1">Full Stack Developer</h3>
-          <h5>Mis Desarrollos</h5>
+          <a
+            class="btn btn-outline-light"
+            href="https://misdesarrollos.space/es/index.html"
+            target="_blank"
+          >
+            Mis Desarrollos
+          </a>
         </div>
         <div class="col-12 col-md-8">
           <div class="card spotlight-card p-5">
-            <p>
+            <p class="mb-4">
               Como Full Stack Developer participé en el desarrollo de múltiples
               proyectos en los cuales puse a prueba mis conocimientos y mi
               capacidad de aprendizaje al utilizar múltiples lenguajes,
@@ -86,29 +110,45 @@ const md = [
           />
           <span class="d-block">2019 - 2025</span>
           <h3 class="text-primary my-1">Web Developer</h3>
-          <h5>Ingenia Oaxaca</h5>
+          <a
+            class="btn btn-outline-light"
+            href="https://ingeniaoaxaca.com/"
+            target="_blank"
+          >
+            Ingenia Oaxaca
+          </a>
         </div>
         <div class="col-12 col-md-8">
           <div class="spotlight-card card p-5">
-            <p>
-              Como Web Developer desarrolle blogs personalizados, SPAs y landing
-              pages para startups locales y nacionales.
+            <p class="mb-4">
+              Como Web Developer mis actividades principales fueron enfocadas al frontend. Estos son algunos de los projectos que me permitieron dominar las tecnologías principales y comprender los fundamentos del desarrollo Web.
             </p>
 
-            <ul>
-              <li>
-                Pagina web para la difusion y publicacion de una revista
-                empresarial.
-              </li>
-
-              <li>
-                Landing page para una empresa comersializadores de mezxcal.
-              </li>
-              <li>
-                Sitema web para la administracion de un equipo de beisbol local
-                para difundir informacion de los miembros del equipo, proximos
-                eventos y productos.
-              </li>
+            <ul class="list-group border-primary list-group-flush">
+              {
+                ingenia.map((item) => (
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-md-between align-items-center py-2">
+                      <h5 class="text-primary m-0">{item.title}</h5>
+                      <div class="d-flex gap-2">
+                        {item.tags.map((tag) => (
+                          <span class="badge bg-primary mb-1">{tag}</span>
+                        ))}
+                        {/* <span class="badge bg-dark mb-1">EdTech</span> */}
+                      </div>
+                    </div>
+                    <p>{item.description}</p>
+                    <ul class="d-flex gap-3 list-unstyled small text-secondary">
+                      {item.features.map((feature) => (
+                        <li class="mb-2">
+                          <i class="bi bi-check-circle-fill text-success me-2" />
+                          {feature}
+                        </li>
+                      ))}
+                    </ul>
+                  </li>
+                ))
+              }
             </ul>
           </div>
         </div>
