feat: fix minor bugs

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -70,7 +70,7 @@
 
 .badge-neon {
     background-color: rgba($primary, 0.15);
-    color: lighten($primary, 10%);
+    // color: lighten($primary, 10%);
     border: 1px solid rgba($primary, 0.3);
 }
 
