--- a/src/components/CardProject.astro
+++ b/src/components/CardProject.astro
@@ -18,7 +18,7 @@ const { project, class: className } = Astro.props;
 
   </div>
   <div class="card-body p-5">
-    <h2 class="text-primary">{ project.title }</h2>
+    <h2 class="text-primary fw-bold">{ project.title }</h2>
     <p class="card-text">{ project.description }</p>
   </div>
   <img
