--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,9 +5,9 @@
   <span class="badge badge-neon rounded-pill px-3 py-2 mb-5">
     🟢 Disponible para nuevos retos | Web & Mobile
   </span>
-  <h1 class="display-5" data-aos="fade-up">Hello, I'm Alex</h1>
+  <h1 class="display-5" data-aos="fade-up">Hola, soy Alex Garcia</h1>
   <h2
-    class="display-2 text-info fw-bold"
+    class="display-2 text-info fw-bold my-3"
     data-aos="fade-up"
     data-aos-delay="100"
   >
@@ -15,13 +15,12 @@
   </h2>
   <div class="col-12 col-lg-6 mx-0 mx-md-auto">
     <p class="mb-5 fs-5 text-white text-opacity-75" data-aos="fade-up" data-aos-delay="200">
-      +5 años transformando requerimientos complejos en arquitectura
-      robusta con <strong>Laravel, NestJS y React</strong>. Especialista
-      en ciclo de vida completo y alto rendimiento.
+      Apasionado por transformar requerimientos de negocio en sistemas simples y eficientes.
+      <strong class="text-primary">Especialista en Laravel, NestJS, React/TS.</strong>
     </p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-5">
       <button type="button" class="btn btn-info btn-lg px-4">
-        Contact me
+        Contáctame
       </button>
     </div>
   </div>
