--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,28 +4,27 @@ import CardProject from './CardProject.astro';
 const projects = [
   {
     title: 'Artisan App',
-    description: 'Some quick example text to build on the card title and make up the bulk of the card content.',
+    description: 'Aplicación móvil para manejar la venta de productos, desarrollada con React Native y Expo.',
     tags: ['React Native', 'Tailwind'],
     image: 'https://images.pexels.com/photos/8761047/pexels-photo-8761047.jpeg',
     link: 'https://github.com/AlexByte18/artisan-app'
   },
   {
     title: 'Artisan API',
-    description: 'A robust REST API built with NestJS and TypeORM for managing products, authentication, and real-time messaging with WebSockets.',
+    description: 'Una API REST robusta creada con NestJS y TypeORM para gestionar productos, autenticación y mensajería en tiempo real con WebSockets.',
     tags: ['Nest.js', 'Typescript'],
-    image: '/images/artisan-dashboard.png',
+    image: '/images/artisan-api-banner.png',
     link: 'https://github.com/AlexByte18/artisan-api'
   },
   {
     title: 'Artisan Dashboard',
-    description: 'Modern administrative dashboard for product management and authentication. Built with React 19, TypeScript, Tailwind CSS, and Vite.',
+    description: 'Panel de control administrativo moderno para la gestión de productos. Creado con React 19, TypeScript, Tailwind CSS y Vite.',
     tags: ['React', 'Radix UI', 'Zustand'],
     image: '/images/artisan-dashboard.png',
     link: 'https://github.com/AlexByte18/artisan-dashboard'
   },
 ];
 
----
 ---
 
 <section class="container py-5">
